Updated: Package.json

--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "cssnano": "^6.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1"
+    "react-horizontal-scrolling-menu": "^4.1.0",
+    "react-icons": "^4.10.1",
+    "react-router-dom": "^6.14.1",
+    "swiper": "^10.0.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
@@ -27,6 +31,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss-cli": "^10.1.0",
+    "tailwind-scrollbar": "^3.0.4",
     "tailwindcss": "^3.3.2",
     "vite": "^4.3.9"
   }
