--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    
+    "predeploy": "npm run build",
+    "deploy": " gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^1.4.0",
