Installed gh-pages

--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    
     "predeploy": "npm run build",
-    "deploy": " gh-pages -d dist"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^1.4.0",
@@ -34,6 +33,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "gh-pages": "^5.0.0",
     "postcss-cli": "^10.1.0",
     "tailwind-scrollbar": "^3.0.4",
     "tailwindcss": "^3.3.2",
