--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://masoumehmohebbi.github.io/react-fitness-app",
+  "homepage": "https://masoumehmohebbi.github.io/",
   "name": "my-project",
   "private": true,
   "version": "0.0.0",
