--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-horizontal-scrolling-menu": "^4.1.0",
     "react-icons": "^4.10.1",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.14.1",
     "swiper": "^10.0.4"
   },
