--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "cssnano": "^6.0.1",
     "framer-motion": "^10.13.0",
     "react": "^18.2.0",
+    "react-animation-on-scroll": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-horizontal-scrolling-menu": "^4.1.0",
     "react-icons": "^4.10.1",
-    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.14.1",
     "swiper": "^10.0.4"
   },
