--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-horizontal-scrolling-menu": "^4.1.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
+    "react-scroll": "^1.8.9",
     "swiper": "^10.0.4"
   },
   "devDependencies": {
